--- a/wp-content/themes/lovebond-child/scss/_style.min.scss
+++ b/wp-content/themes/lovebond-child/scss/_style.min.scss
@@ -1886,7 +1886,7 @@ textarea {
         width: 170px;
         height: 170px;
         right: 25px!important;
-        bottom: 115px!important;
+        // bottom: 115px!important;
         margin: 0
     }
     .main_loader_number>div {
